--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "admin-lte": "^2.3.11",
     "axios": "^0.16.2",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.7.1",
     "expose-loader": "^0.7.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
